# RTS_Dashboard

./: pyproject.toml
src/: DataLoader.py  main.py
src/data/: data_center_tickets.json  data_center_tickets_call_1.json  data_center_tickets_call_2.json
src/data/faiss_index.fais.faiss/: index.faiss  index.pkl
src/indexers/: FAISSIndexer.py
src/utils/: rts_ticket_maker.py
src/vector_stores/: ChromaIndexer.py  FAISSIndexer.py  VectorIndexer.py
