[project]
name = "rts-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.64",
    "langchain-text-splitters>=0.3.8",
    "pandas>=2.3.0",
    "requests>=2.32.3",
    "spacy>=3.8.7",
    "tiktoken>=0.9.0",
]
